@@ -87,7 +87,8 @@ DboxMain::DboxMain(CWnd* pParent)
   m_IsStartClosed(false), m_IsStartSilent(false),
   m_bStartHiddenAndMinimized(false),
   m_bAlreadyToldUserNoSave(false), m_inExit(false),
-  m_pCC(NULL), m_bBoldItem(false), m_bIsRestoring(false), m_bImageInLV(false)
+  m_pCC(NULL), m_bBoldItem(false), m_bIsRestoring(false), m_bImageInLV(false),
+  m_lastclipboardaction(_T(""))
 {
   CS_EXPCOLGROUP.LoadString(IDS_MENUEXPCOLGROUP);
   CS_EDITENTRY.LoadString(IDS_MENUEDITENTRY);
@@ -2015,21 +2016,64 @@ void DboxMain::UpdateStatusBar()
 {
   if (m_toolbarsSetup == TRUE) {
     CString s;
+
+    // Set the width according to the text
+    UINT uiID, uiStyle;
+    int iWidth;
+    CRect rectPane;
+    // calculate text width
+    CClientDC dc(&m_statusBar);
+    CFont *pFont = m_statusBar.GetFont();
+    ASSERT(pFont);
+    dc.SelectObject(pFont);
+
     if (m_bOpen) {
+      dc.DrawText(m_lastclipboardaction, &rectPane, DT_CALCRECT);
+      m_statusBar.GetPaneInfo(SB_CLIPBOARDACTION, uiID, uiStyle, iWidth);
+      m_statusBar.SetPaneInfo(SB_CLIPBOARDACTION, uiID, uiStyle, rectPane.Width());
+      m_statusBar.SetPaneText(SB_CLIPBOARDACTION, m_lastclipboardaction);
+
       s = m_core.IsChanged() ? _T("*") : _T(" ");
+      dc.DrawText(s, &rectPane, DT_CALCRECT);
+      m_statusBar.GetPaneInfo(SB_MODIFIED, uiID, uiStyle, iWidth);
+      m_statusBar.SetPaneInfo(SB_MODIFIED, uiID, uiStyle, rectPane.Width());
       m_statusBar.SetPaneText(SB_MODIFIED, s);
+
       s = m_core.IsReadOnly() ? _T("R-O") : _T("R/W");
+      dc.DrawText(s, &rectPane, DT_CALCRECT);
+      m_statusBar.GetPaneInfo(SB_READONLY, uiID, uiStyle, iWidth);
+      m_statusBar.SetPaneInfo(SB_READONLY, uiID, uiStyle, rectPane.Width());
       m_statusBar.SetPaneText(SB_READONLY, s);
+
       s.Format(IDS_NUMITEMS, m_core.GetNumEntries());
+      dc.DrawText(s, &rectPane, DT_CALCRECT);
+      m_statusBar.GetPaneInfo(SB_NUM_ENT, uiID, uiStyle, iWidth);
+      m_statusBar.SetPaneInfo(SB_NUM_ENT, uiID, uiStyle, rectPane.Width());
       m_statusBar.SetPaneText(SB_NUM_ENT, s);
     } else {
       s.LoadString(IDS_STATCOMPANY);
       m_statusBar.SetPaneText(SB_DBLCLICK, s);
+
+      dc.DrawText(_T(" "), &rectPane, DT_CALCRECT);
+
+      m_statusBar.GetPaneInfo(SB_CLIPBOARDACTION, uiID, uiStyle, iWidth);
+      m_statusBar.SetPaneInfo(SB_CLIPBOARDACTION, uiID, uiStyle, rectPane.Width());
+      m_statusBar.SetPaneText(SB_CLIPBOARDACTION, _T(" "));
+
+      m_statusBar.GetPaneInfo(SB_MODIFIED, uiID, uiStyle, iWidth);
+      m_statusBar.SetPaneInfo(SB_MODIFIED, uiID, uiStyle, rectPane.Width());
       m_statusBar.SetPaneText(SB_MODIFIED, _T(" "));
+
+      m_statusBar.GetPaneInfo(SB_READONLY, uiID, uiStyle, iWidth);
+      m_statusBar.SetPaneInfo(SB_READONLY, uiID, uiStyle, rectPane.Width());
       m_statusBar.SetPaneText(SB_READONLY, _T(" "));
+
+      m_statusBar.GetPaneInfo(SB_NUM_ENT, uiID, uiStyle, iWidth);
+      m_statusBar.SetPaneInfo(SB_NUM_ENT, uiID, uiStyle, rectPane.Width());
       m_statusBar.SetPaneText(SB_NUM_ENT, _T(" "));
     }
   }
+
   /*
   This doesn't exactly belong here, but it makes sure that the
   title is fresh...
